// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChecklistChangeoverTrigger > renders correctly with delayTime 1`] = `
<div
  data-v-app=""
>
  
  
  
  <span
    class="d-flex align-center white-space-nowrap"
  >
    <span
      class="ma-1"
    >
      show
    </span>
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="name"
      itemvalue="id"
      loading="false"
      menuinputclass="ma-1"
      menuinputtype="primary"
      modelvalue="AFTER"
      numericorderby="false"
      placeholder=""
      prependtext=""
      removenonexistentselections="false"
      required="true"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <evocon-duration-chip-stub
      class="ma-1"
      error="false"
      maxhours="9999"
      modelvalue="180"
    />
    <!--v-if-->
    <!--v-if-->
  </span>
  
  
  
</div>
`;

exports[`ChecklistChangeoverTrigger > renders correctly with leadTime 1`] = `
<div
  data-v-app=""
>
  
  
  
  <span
    class="d-flex align-center white-space-nowrap"
  >
    <span
      class="ma-1"
    >
      show
    </span>
    <selection-input-stub
      checkbox="true"
      coloractiveprepend="false"
      disabled="false"
      disabledvalues=""
      emittoggleall="false"
      emptyequalsallselected="false"
      error="false"
      filled="true"
      groupidkey="id"
      groups=""
      groupsorderby="name"
      hiddenitemscount="0"
      hidesearch="true"
      hint=""
      inverted="false"
      isgroupedselect="false"
      issingleselect="true"
      itemflag=""
      itemgroupidkey="groupId"
      items="[object Object],[object Object]"
      itemsecondarytext=""
      itemtertiarytext=""
      itemtext="name"
      itemvalue="id"
      loading="false"
      menuinputclass="ma-1"
      menuinputtype="primary"
      modelvalue="BEFORE"
      numericorderby="false"
      placeholder=""
      prependtext=""
      removenonexistentselections="false"
      required="true"
      showemptyarrayasallselected="false"
      someselected="false"
      totalcount="0"
      usechips="true"
    />
    <evocon-number-input-stub
      allowfloat="false"
      allownegative="false"
      class="ma-1"
      error="false"
      grow="true"
      maxvalue="999999999999999"
      modelvalue="5"
      suffix="min"
      usechip="true"
    />
    <!--v-if-->
    <icon-with-tooltip-stub
      additionalclasses="ml-2"
      color=""
      icon="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
      iconid=""
      iconsrc=""
      size="16"
      tooltiplocation="top"
      tooltiptext="Checklist is triggered by changeover, but shown on the previous product."
    />
  </span>
  
  
  
</div>
`;
